2008-11-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* international/quail.el (quail-indent-to): New function.
	(quail-completion-1, quail-completion-list-translations)
	(quail-insert-decode-map): Use it to improve alignment.
	(quail-build-decode-map): Don't ignore latin-1 chars.
	(quail-help): Increase the max decode-map size so that even the TeX map
	gets printed.

	* bookmark.el (bookmark-get-bookmark): Add `noerror' arg.
	Signal error for invalid bookmark.
	(bookmark-get-bookmark-record): Undo last change.
	(bookmark-store, bookmark-delete): Use new arg `noerror'.

	* bookmark.el (bookmark-buffer-file-name): Also abbreviate dired-dir.
	Suggested by Toru TSUNEYOSHI.

2008-11-21  Shigeru Fukaya  <shigeru.fukaya@gmail.com>

	* byte-opt.el (byte-compile-butlast): Move up in file.
	(byte-optimize-plus): Don't call
	byte-optimize-delay-constants-math (bug#1334).
	Use byte-optimize-predicate to optimize constants.
	(byte-optimize-minus): Don't call
	byte-optimize-delay-constants-math.  Remove zero arguments first
	if possible.  Call byte-optimize-predicate to optimize constants.
	(byte-optimize-multiply): Remove optimizations for arguments of 0
	and 2, which may be inaccurate.  Optimize (* x -1) to (- x).
	Call byte-optimize-predicate.
	(byte-optimize-divide): Leave runtime errors unchanged.
	Optimize (/ x 1) to (+ x 0). Remove optimizations for arguments of
	0 and 2.0, which may be inaccurate.  Call byte-optimize-predicate.

2008-11-21  Juanma Barranquero  <lekktu@gmail.com>

	* bookmark.el (bookmark-jump-noselect): Add obsolescence
	declaration and remove redundant info from docstring.

	* isearch.el (isearch-search-string): Doc fix.
	(search-exit-option, search-slow-window-lines, search-slow-speed)
	(search-upper-case, search-nonincremental-instead)
	(search-whitespace-regexp, search-ring-max, regexp-search-ring-max)
	(search-ring-update, search-highlight, isearch-lazy-highlight)
	(lazy-highlight-cleanup, lazy-highlight-initial-delay)